--- a/BCB420/HW/A1.Rmd
+++ b/BCB420/HW/A1.Rmd
@@ -1,42 +1,17 @@
-
 ```{r}
-# Set seed for reproducibility
+# Create 5x10 matrix
 set.seed(123)
+my_matrix <- matrix(sample(1:100, 50, replace = TRUE), nrow = 5, ncol = 10)
 
-# Create a 5 x 10 matrix of random integers
-mat <- matrix(
-  sample(1:100, 50, replace = TRUE),
-  nrow = 5,
-  ncol = 10
-)
+# Set Names
+colnames(my_matrix) <- c(paste0("cond", 1:5), paste0("ctrl", 1:5))
+rownames(my_matrix) <- paste0("gene", 1:5)
 
-# Define column names
-colnames(mat) <- c(
-  "cond1", "cond2", "cond3", "cond4", "cond5",
-  "ctrl1", "ctrl2", "ctrl3", "ctrl4", "ctrl5"
-)
+# Compute Fold Change (Mean of cond / Mean of ctrl)
+cond_cols <- my_matrix[, 1:5]
+ctrl_cols <- my_matrix[, 6:10]
+fold_change <- rowMeans(cond_cols) / rowMeans(ctrl_cols)
 
-# Define row names
-rownames(mat) <- paste0("gene", 1:5)
-
-# View matrix
-mat
-
-
-
-# Compute means
-cond_mean <- rowMeans(mat[, 1:5])
-ctrl_mean <- rowMeans(mat[, 6:10])
-
-# Compute fold change
-fold_change <- cond_mean / ctrl_mean
-
-# Create results table
-results <- data.frame(
-  ConditionMean = cond_mean,
-  ControlMean = ctrl_mean,
-  FoldChange = fold_change
-)
-
-results
+# Show results
+data.frame(my_matrix, Fold_Change = fold_change)
 ```
