--- a/blank_all_about_me.Rmd
+++ b/blank_all_about_me.Rmd
@@ -26,7 +26,7 @@ courses <- read.csv(file = "courses.csv")
 hobbies <- read.csv(file = "hobbies.csv")
 ```
 
-# This R Markdown is to get to know Tamar!
+# This R Markdown is to get to know ...Student's Name...!
 
 ## Bio {#bachelors-degree}
 ... fill in ...
